fix: make image map item movable on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ img {
   max-width: 100%;
 }
 
+p {
+  overflow-wrap: break-word;
+}
+
 /* =========================================
    Layout Sections
    ========================================= */
